--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <table>
         <tr>
             <td><strong>Name</strong></td>
-            <td>John Smith</td>
+            <td>Javier Gethers</td>
         </tr>
         <tr>
             <td><strong>Introduction</strong></td>
-            <td>Hello, I am a junior in the BS IT program. I enjoy coding Python and R.</td>
+            <td>Hello, I am a Junior at George Mason University pursuing a Bachelors degree in cybersecurity.</td>
         </tr>
         <tr>
             <td><strong>Hobbies</strong></td>
-            <td>Programming, making websites.</td>
+            <td>Playing the game, gym, cybersecurity projects, and coding.</td>
         </tr>
     </table>
 
